; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_amd_iommu.c_dma_ops_domain_map.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_amd_iommu.c_dma_ops_domain_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amd_iommu = type { i32 }
%struct.dma_ops_domain = type { i64 }

@PAGE_MASK = common dso_local global i32 0, align 4
@bad_dma_address = common dso_local global i32 0, align 4
@IOMMU_PTE_P = common dso_local global i32 0, align 4
@IOMMU_PTE_FC = common dso_local global i32 0, align 4
@DMA_TO_DEVICE = common dso_local global i32 0, align 4
@IOMMU_PTE_IR = common dso_local global i32 0, align 4
@DMA_FROM_DEVICE = common dso_local global i32 0, align 4
@IOMMU_PTE_IW = common dso_local global i32 0, align 4
@DMA_BIDIRECTIONAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.amd_iommu*, %struct.dma_ops_domain*, i64, i32, i32)* @dma_ops_domain_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dma_ops_domain_map(%struct.amd_iommu* %0, %struct.dma_ops_domain* %1, i64 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.amd_iommu*, align 8
  %8 = alloca %struct.dma_ops_domain*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store %struct.amd_iommu* %0, %struct.amd_iommu** %7, align 8
  store %struct.dma_ops_domain* %1, %struct.dma_ops_domain** %8, align 8
  store i64 %2, i64* %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %14 = load i64, i64* %9, align 8
  %15 = load %struct.dma_ops_domain*, %struct.dma_ops_domain** %8, align 8
  %16 = getelementptr inbounds %struct.dma_ops_domain, %struct.dma_ops_domain* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ugt i64 %14, %17
  %19 = zext i1 %18 to i32
  %20 = call i32 @WARN_ON(i32 %19)
  %21 = load i32, i32* @PAGE_MASK, align 4
  %22 = load i32, i32* %10, align 4
  %23 = and i32 %22, %21
  store i32 %23, i32* %10, align 4
  %24 = load %struct.dma_ops_domain*, %struct.dma_ops_domain** %8, align 8
  %25 = load i64, i64* %9, align 8
  %26 = call i32* @dma_ops_get_pte(%struct.dma_ops_domain* %24, i64 %25)
  store i32* %26, i32** %12, align 8
  %27 = load i32*, i32** %12, align 8
  %28 = icmp ne i32* %27, null
  br i1 %28, label %31, label %29

29:                                               ; preds = %5
  %30 = load i32, i32* @bad_dma_address, align 4
  store i32 %30, i32* %6, align 4
  br label %72

31:                                               ; preds = %5
  %32 = load i32, i32* %10, align 4
  %33 = load i32, i32* @IOMMU_PTE_P, align 4
  %34 = or i32 %32, %33
  %35 = load i32, i32* @IOMMU_PTE_FC, align 4
  %36 = or i32 %34, %35
  store i32 %36, i32* %13, align 4
  %37 = load i32, i32* %11, align 4
  %38 = load i32, i32* @DMA_TO_DEVICE, align 4
  %39 = icmp eq i32 %37, %38
  br i1 %39, label %40, label %44

40:                                               ; preds = %31
  %41 = load i32, i32* @IOMMU_PTE_IR, align 4
  %42 = load i32, i32* %13, align 4
  %43 = or i32 %42, %41
  store i32 %43, i32* %13, align 4
  br label %64

44:                                               ; preds = %31
  %45 = load i32, i32* %11, align 4
  %46 = load i32, i32* @DMA_FROM_DEVICE, align 4
  %47 = icmp eq i32 %45, %46
  br i1 %47, label %48, label %52

48:                                               ; preds = %44
  %49 = load i32, i32* @IOMMU_PTE_IW, align 4
  %50 = load i32, i32* %13, align 4
  %51 = or i32 %50, %49
  store i32 %51, i32* %13, align 4
  br label %63

52:                                               ; preds = %44
  %53 = load i32, i32* %11, align 4
  %54 = load i32, i32* @DMA_BIDIRECTIONAL, align 4
  %55 = icmp eq i32 %53, %54
  br i1 %55, label %56, label %62

56:                                               ; preds = %52
  %57 = load i32, i32* @IOMMU_PTE_IR, align 4
  %58 = load i32, i32* @IOMMU_PTE_IW, align 4
  %59 = or i32 %57, %58
  %60 = load i32, i32* %13, align 4
  %61 = or i32 %60, %59
  store i32 %61, i32* %13, align 4
  br label %62

62:                                               ; preds = %56, %52
  br label %63

63:                                               ; preds = %62, %48
  br label %64

64:                                               ; preds = %63, %40
  %65 = load i32*, i32** %12, align 8
  %66 = load i32, i32* %65, align 4
  %67 = call i32 @WARN_ON(i32 %66)
  %68 = load i32, i32* %13, align 4
  %69 = load i32*, i32** %12, align 8
  store i32 %68, i32* %69, align 4
  %70 = load i64, i64* %9, align 8
  %71 = trunc i64 %70 to i32
  store i32 %71, i32* %6, align 4
  br label %72

72:                                               ; preds = %64, %29
  %73 = load i32, i32* %6, align 4
  ret i32 %73
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32* @dma_ops_get_pte(%struct.dma_ops_domain*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
